--- a/lab/src/main/resources/com/example/lab/hello-view.fxml
+++ b/lab/src/main/resources/com/example/lab/hello-view.fxml
@@ -1,16 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.lab.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.lab.Controller.Controller">
+    <children>
+        <Pane prefHeight="563.0" prefWidth="925.0">
+            <children>
+                <Button fx:id="startButton" layoutX="314.0" layoutY="317.0" mnemonicParsing="false" onAction="#StartProgress" prefHeight="232.0" prefWidth="298.0" text="START">
+                    <font>
+                        <Font size="71.0" />
+                    </font>
+                </Button>
+                <ProgressBar fx:id="pBar" layoutX="76.0" layoutY="56.0" prefHeight="60.0" prefWidth="775.0" progress="1.0" />
+            </children>
+        </Pane>
+    </children>
+    <columnConstraints>
+        <ColumnConstraints />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints />
+    </rowConstraints>
+</GridPane>
