--- a/lab/src/main/resources/example/lab/hello-view.fxml
+++ b/lab/src/main/resources/example/lab/hello-view.fxml
@@ -8,9 +8,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="example.lab.Controller.HelloController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18" fx:controller="example.lab.Controller.HelloController">
     <children>
         <Pane prefHeight="563.0" prefWidth="925.0">
             <children>
@@ -19,7 +17,7 @@
                         <Font size="71.0" />
                     </font>
                 </Button>
-                <ProgressBar fx:id="pBar" layoutX="76.0" layoutY="56.0" prefHeight="60.0" prefWidth="775.0" progress="1.0" />
+                <ProgressBar fx:id="pBar" layoutX="76.0" layoutY="56.0" prefHeight="60.0" prefWidth="775.0" progress="0.0" />
             </children>
         </Pane>
     </children>
