--- a/lab/src/main/resources/example/lab/hello-view.fxml
+++ b/lab/src/main/resources/example/lab/hello-view.fxml
@@ -7,17 +7,33 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18" fx:controller="example.lab.Controller.HelloController">
+<GridPane alignment="center" hgap="10" prefHeight="306.0" prefWidth="834.0" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18" fx:controller="example.lab.Controller.HelloController">
     <children>
-        <Pane prefHeight="563.0" prefWidth="925.0">
+        <Pane prefHeight="563.0" prefWidth="925.0" style="-fx-background-color: #708090;">
             <children>
-                <Button fx:id="startButton" layoutX="314.0" layoutY="317.0" mnemonicParsing="false" onAction="#StartProgress" prefHeight="232.0" prefWidth="298.0" text="START">
+                <Button fx:id="startButton" layoutX="24.0" layoutY="165.0" mnemonicParsing="false" onAction="#StartProgress" prefHeight="57.0" prefWidth="183.0" text="Старт" textAlignment="JUSTIFY">
                     <font>
-                        <Font size="71.0" />
+                        <Font name="Arial Black" size="32.0" />
                     </font>
                 </Button>
-                <ProgressBar fx:id="pBar" layoutX="76.0" layoutY="56.0" prefHeight="60.0" prefWidth="775.0" progress="0.0" />
+                <ProgressBar fx:id="pBar" layoutX="24.0" layoutY="96.0" prefHeight="32.0" prefWidth="793.0" progress="0.0" />
+            <Text layoutX="24.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Текущий прогресс">
+               <font>
+                  <Font name="System Bold Italic" size="43.0" />
+               </font>
+            </Text>
+            <Button fx:id="startButton1" layoutX="286.0" layoutY="165.0" mnemonicParsing="false" onAction="#StartProgress" prefHeight="69.0" prefWidth="270.0" text="Пауза" textAlignment="JUSTIFY">
+               <font>
+                  <Font name="Arial Black" size="32.0" />
+               </font>
+            </Button>
+            <Button fx:id="startButton2" layoutX="634.0" layoutY="165.0" mnemonicParsing="false" onAction="#StartProgress" prefHeight="57.0" prefWidth="183.0" text="Стоп" textAlignment="JUSTIFY">
+               <font>
+                  <Font name="Arial Black" size="32.0" />
+               </font>
+            </Button>
             </children>
         </Pane>
     </children>
