--- a/lab/src/main/resources/example/lab/hello-view.fxml
+++ b/lab/src/main/resources/example/lab/hello-view.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane alignment="center" hgap="10" prefHeight="306.0" prefWidth="834.0" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18" fx:controller="example.lab.Controller.HelloController">
+<GridPane alignment="center" hgap="10" prefHeight="306.0" prefWidth="834.0" vgap="10" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="example.lab.Controller.HelloController">
     <children>
         <Pane prefHeight="563.0" prefWidth="925.0" style="-fx-background-color: #708090;">
             <children>
@@ -19,17 +19,17 @@
                     </font>
                 </Button>
                 <ProgressBar fx:id="pBar" layoutX="24.0" layoutY="96.0" prefHeight="32.0" prefWidth="793.0" progress="0.0" />
-            <Text layoutX="24.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Текущий прогресс">
+            <Text fill="WHITE" layoutX="24.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Текущий прогресс">
                <font>
                   <Font name="System Bold Italic" size="43.0" />
                </font>
             </Text>
-            <Button fx:id="startButton1" layoutX="286.0" layoutY="165.0" mnemonicParsing="false" onAction="#StartProgress" prefHeight="69.0" prefWidth="270.0" text="Пауза" textAlignment="JUSTIFY">
+            <Button fx:id="pauseButton" layoutX="286.0" layoutY="165.0" mnemonicParsing="false" prefHeight="69.0" prefWidth="270.0" text="Пауза" textAlignment="JUSTIFY">
                <font>
                   <Font name="Arial Black" size="32.0" />
                </font>
             </Button>
-            <Button fx:id="startButton2" layoutX="634.0" layoutY="165.0" mnemonicParsing="false" onAction="#StartProgress" prefHeight="57.0" prefWidth="183.0" text="Стоп" textAlignment="JUSTIFY">
+            <Button fx:id="StopButton" layoutX="634.0" layoutY="165.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="183.0" text="Стоп" textAlignment="JUSTIFY">
                <font>
                   <Font name="Arial Black" size="32.0" />
                </font>
